Actualización módulo kmeans

--- a/3_1_K_means.ipynb
+++ b/3_1_K_means.ipynb
@@ -326,7 +326,7 @@
         "id": "4CRZLXlp-TYX"
       },
       "source": [
-        "## 2. Kmeans ccon Scikit Learn\r\n",
+        "## 2. Kmeans con Scikit Learn\r\n",
         "\r\n",
         "Realizaremos la predicción de dígitos en imágenes usando Kmeans y la librería Sklearn"
       ]
